--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
   - init: pip3 install -r requirements.txt
-  - init: poetry install
+    command: poetry install
 image:
   file: .gitpod.Dockerfile
