--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "info2602mockLE",
+  "name": "mock",
   "version": "1.0.0",
   "description": "[![Gitpod Ready-to-Code](https://img.shields.io/badge/Gitpod-Ready--to--Code-blue?logo=gitpod)](https://gitpod.io/#https://github.com/uwidcit/info2602mockLE)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha && mocha >> report.txt",
+    "newman" : "newman run mock_collection.json -g globals.json; return 0;",
+    "start": "npm run newman && npm run newman >> api-report.txt"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/uwidcit/info2602mockLE/issues"
   },
-  "homepage": "https://github.com/uwidcit/info2602mockLE#readme"
+  "homepage": "https://github.com/uwidcit/info2602mockLE#readme",
+  "dependencies": {
+    "chai": "^4.2.0",
+    "puppeteer": "^2.1.1"
+  }
 }
