--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
 PyJWT==1.4.2
+pylint-flask-sqlalchemy==0.2.0
 SQLAlchemy==1.3.15
 Werkzeug==1.0.0
 WTForms==2.2.1
